feat: add database migration system with SQLite pragma configuration
- Create migration system using goose with embedded SQL files
- Add initial SQLite pragma settings for optimal performance
- Implement goose CLI tool with environment variable support
- Add development environment configuration for database path
- Include artifacts folder structure for development database

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,10 @@
 # Downloaded proto validate files
 /schemas/buf/validate/
 
+# Artifacts folder (development files)
+/artifacts/
+!/artifacts/.gitkeep
+
 # Direnv
 .direnv/
 .envrc.cache
