feat(proto): update go package prefix for generated protobuf files
Change go_package_prefix to include lib/claw/gen/proto for better organization.

--- a/schemas/buf.gen.yaml
+++ b/schemas/buf.gen.yaml
@@ -3,7 +3,7 @@ managed:
   enabled: true
   override:
     - file_option: go_package_prefix
-      value: github.com/tigorlazuardi/claw
+      value: github.com/tigorlazuardi/claw/lib/claw/gen/proto
   disable:
     - path: buf
 plugins:
