feat(webui): implement component-based architecture with lazy loading
- Remove default Svelte files (Counter.svelte, svelte.svg)
- Refactor App.svelte to implement URL-based routing with lazy loading
- Create pages directory with Home, Images, Devices, Sources, Jobs components
- Implement component separation: components (individual items) and layouts (collections)
- Add ImageCard component for individual image display with masonry grid
- Add ImageModal component for full-screen image preview with accessibility
- Add MasonryLayout component for responsive image gallery with date grouping
- Add Sidebar component with dark theme navigation
- Add ConnectRPC dependencies for API communication
- Update app.css with dark theme styling and responsive design

--- a/webui/package.json
+++ b/webui/package.json
@@ -16,5 +16,9 @@
     "svelte-check": "^4.3.1",
     "typescript": "~5.8.3",
     "vite": "^7.1.2"
+  },
+  "dependencies": {
+    "@connectrpc/connect": "^2.1.0",
+    "@connectrpc/connect-web": "^2.1.0"
   }
 }
