--- a/webui/package.json
+++ b/webui/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@connectrpc/connect": "^2.1.0",
     "@connectrpc/connect-web": "^2.1.0",
-    "@dvcol/svelte-simple-router": "^2.7.2"
+    "@dvcol/svelte-simple-router": "^2.7.2",
+    "svelte-bricks": "^0.3.2"
   }
 }
