feat(webui): fix bad webui integration and add source modal

--- a/webui/package.json
+++ b/webui/package.json
@@ -21,6 +21,7 @@
     "@connectrpc/connect": "^2.1.0",
     "@connectrpc/connect-web": "^2.1.0",
     "@dvcol/svelte-simple-router": "^2.7.2",
+    "@sveltestack/svelte-query": "^1.6.0",
     "svelte-bricks": "^0.3.2"
   }
 }
