--- a/webui/package.json
+++ b/webui/package.json
@@ -24,7 +24,9 @@
     "@connectrpc/connect-web": "^2.1.0",
     "@dvcol/svelte-simple-router": "^2.7.2",
     "@sveltestack/svelte-query": "^1.6.0",
+    "cron-parser": "^5.3.1",
     "svelte-bricks": "^0.3.2",
-    "svelte-exmarkdown": "^5.0.2"
+    "svelte-exmarkdown": "^5.0.2",
+    "svelte-forms": "^2.3.1"
   }
 }
