--- a/webui/package.json
+++ b/webui/package.json
@@ -10,8 +10,11 @@
     "check": "svelte-check --tsconfig ./tsconfig.app.json && tsc -p tsconfig.node.json"
   },
   "devDependencies": {
+    "@melt-ui/pp": "^0.3.2",
+    "@melt-ui/svelte": "^0.86.6",
     "@sveltejs/vite-plugin-svelte": "^6.1.1",
     "@tsconfig/svelte": "^5.0.4",
+    "daisyui": "^5.1.8",
     "prettier": "^3.6.2",
     "prettier-plugin-svelte": "^3.4.0",
     "svelte": "^5.38.1",
@@ -23,10 +26,13 @@
     "@connectrpc/connect": "^2.1.0",
     "@connectrpc/connect-web": "^2.1.0",
     "@dvcol/svelte-simple-router": "^2.7.2",
+    "@lucide/svelte": "^0.542.0",
     "@sveltestack/svelte-query": "^1.6.0",
+    "@tailwindcss/vite": "^4.1.13",
     "cron-parser": "^5.3.1",
     "svelte-bricks": "^0.3.2",
     "svelte-exmarkdown": "^5.0.2",
-    "svelte-forms": "^2.3.1"
+    "svelte-forms": "^2.3.1",
+    "tailwindcss": "^4.1.13"
   }
 }
