--- a/webui/package.json
+++ b/webui/package.json
@@ -13,6 +13,7 @@
     "@melt-ui/pp": "^0.3.2",
     "@melt-ui/svelte": "^0.86.6",
     "@sveltejs/vite-plugin-svelte": "^6.1.1",
+    "@tailwindcss/typography": "^0.5.16",
     "@tsconfig/svelte": "^5.0.4",
     "daisyui": "^5.1.8",
     "prettier": "^3.6.2",
