--- a/webui/package.json
+++ b/webui/package.json
@@ -31,6 +31,9 @@
     "@sveltestack/svelte-query": "^1.6.0",
     "@tailwindcss/vite": "^4.1.13",
     "cron-parser": "^5.3.1",
+    "flowbite": "^3.1.2",
+    "flowbite-svelte": "^1.13.8",
+    "flowbite-svelte-icons": "^3.0.0",
     "svelte-bricks": "^0.3.2",
     "svelte-exmarkdown": "^5.0.2",
     "svelte-forms": "^2.3.1",
