--- a/webui/package.json
+++ b/webui/package.json
@@ -10,12 +10,9 @@
     "check": "svelte-check --tsconfig ./tsconfig.app.json && tsc -p tsconfig.node.json"
   },
   "devDependencies": {
-    "@melt-ui/pp": "^0.3.2",
-    "@melt-ui/svelte": "^0.86.6",
     "@sveltejs/vite-plugin-svelte": "^6.1.1",
     "@tailwindcss/typography": "^0.5.16",
     "@tsconfig/svelte": "^5.0.4",
-    "daisyui": "^5.1.8",
     "prettier": "^3.6.2",
     "prettier-plugin-svelte": "^3.4.0",
     "svelte": "^5.38.1",
@@ -34,6 +31,7 @@
     "flowbite": "^3.1.2",
     "flowbite-svelte": "^1.13.8",
     "flowbite-svelte-icons": "^3.0.0",
+    "query-string-parser": "^1.0.0",
     "svelte-bricks": "^0.3.2",
     "svelte-exmarkdown": "^5.0.2",
     "svelte-forms": "^2.3.1",
