--- a/webui/package.json
+++ b/webui/package.json
@@ -30,7 +30,9 @@
     "@lucide/svelte": "^0.542.0",
     "@sveltestack/svelte-query": "^1.6.0",
     "@tailwindcss/vite": "^4.1.13",
+    "bits-ui": "^2.9.6",
     "cron-parser": "^5.3.1",
+    "query-string-parser": "^1.0.0",
     "svelte-bricks": "^0.3.2",
     "svelte-exmarkdown": "^5.0.2",
     "svelte-forms": "^2.3.1",
