--- a/webui/package.json
+++ b/webui/package.json
@@ -26,11 +26,12 @@
     "@connectrpc/connect-web": "^2.1.0",
     "@dvcol/svelte-simple-router": "^2.7.2",
     "@lucide/svelte": "^0.542.0",
-    "@sveltestack/svelte-query": "^1.6.0",
     "@tailwindcss/vite": "^4.1.13",
+    "@tanstack/svelte-query": "^5.89.0",
     "bits-ui": "^2.9.6",
     "cron-schedule": "^5.0.4",
     "query-string-parser": "^1.0.0",
+    "runed": "^0.31.1",
     "svelte-bricks": "^0.3.2",
     "svelte-exmarkdown": "^5.0.2",
     "svelte-forms": "^2.3.1",
