--- a/webui/package.json
+++ b/webui/package.json
@@ -35,6 +35,7 @@
     "svelte-bricks": "^0.3.2",
     "svelte-exmarkdown": "^5.0.2",
     "svelte-forms": "^2.3.1",
-    "tailwindcss": "^4.1.13"
+    "tailwindcss": "^4.1.13",
+    "valibot": "^1.1.0"
   }
 }
