feat(webui): starts adding otel integration to webui

--- a/webui/package.json
+++ b/webui/package.json
@@ -26,6 +26,13 @@
     "@connectrpc/connect-web": "^2.1.0",
     "@dvcol/svelte-simple-router": "^2.7.2",
     "@lucide/svelte": "^0.542.0",
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/api-logs": "^0.206.0",
+    "@opentelemetry/exporter-logs-otlp-http": "^0.206.0",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.206.0",
+    "@opentelemetry/instrumentation-fetch": "^0.206.0",
+    "@opentelemetry/opentelemetry-browser-detector": "^0.206.0",
+    "@opentelemetry/resources": "^2.1.0",
     "@sjsf/ajv8-validator": "^2.4.0",
     "@sjsf/daisyui5-theme": "^2.4.0",
     "@sjsf/form": "^2.4.0",
